--- a/CUS615_demo.ipynb
+++ b/CUS615_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhwbhu2eD1D7QK/a8l5m1n",
+      "authorship_tag": "ABX9TyNf6Bc57AmroDDz5fy+E6zt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,86 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Introduction\n"
+      ],
       "metadata": {
-        "id": "Vspp4JNyqPGI"
+        "id": "v1iw7OUms_Ac"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AXv1HQEWthuE",
+        "outputId": "eaa06937-abc5-48f9-ae5e-a4a8965166a3"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2jBczZ2_tkR5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preprocess the data"
+      ],
+      "metadata": {
+        "id": "Uhkc18ADt_rf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Preprocess\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AkMt4wAtuCNy",
+        "outputId": "9b1d9e70-6402-4238-9b5c-dde63ac88cbe"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Preprocess\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tj_5pOMuuE3r"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
