--- a/ProblemSet7/ProblemSet_07_NN_Basics_(1).ipynb
+++ b/ProblemSet7/ProblemSet_07_NN_Basics_(1).ipynb
@@ -632,7 +632,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "By increasing the nodes in our dense layer from 256 to 512, and adding a dropout layer our accuracy improved and out loss score decrease. Interestingly, when I tried to keep a dense layer with 256 nodes and add a new layer with 128 nodes, the accuracy score decreased."
+        "By increasing the nodes in our dense layer from 256 to 512, and adding a dropout layer our accuracy improved and our loss score decreased. Interestingly, when I tried to keep a dense layer with 256 nodes and add a new layer with 128 nodes, the accuracy score decreased."
       ],
       "metadata": {
         "id": "OnH3nTVeb8Gk"
